# media-transfer-tool

./: .gitignore  .gitleaks.toml  .pre-commit-config.yaml  README.md
.claude/: settings.local.json
.serena/: project.yml
.serena/cache/typescript/: document_symbols_cache_v23-06-25.pkl
.serena/memories/: code_style_conventions.md  development_workflow.md  project_overview.md  suggested_commands.md
docs/: development-plan.md  gui-library-comparison.md  gui-library-selection-report.md  import-feature-spec.md  modern-ui-design-research.md  priority-features.md  prototype-comparison-report.md  prototype-demo-guide.md  prototype-plan.md  requirements.md  technology-comparison.md  technology-decision.md  technology-selection.md
memo/history/: 001-initial-project-setup.md  002_gui_library_selection.md  003_flutter_prototype.md  004_flutter_adoption_decision.md  005_modern_ui_implementation.md  006_comprehensive_media_management_system.md
prototypes/electron-prototype/: package.json
prototypes/electron-prototype/src/: App.css  App.tsx  index.css
prototypes/flutter-prototype/: MOCKUP.md  README.md  analysis_options.yaml  pubspec.yaml
prototypes/gui-comparison/: README.md  vite.config.ts
prototypes/qt-prototype/: CMakeLists.txt  README.md
prototypes/qt-prototype/resources/: style.qss
prototypes/qt-prototype/src/: FileListWidget.cpp  FileListWidget.h  MainWindow.cpp  MainWindow.h  SettingsWidget.cpp  SettingsWidget.h  main.cpp
prototypes/tauri-prototype/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
(+50 files in other folders)
